alignment issue fixed

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -206,10 +206,7 @@ hr.broad {
   padding: 1px 0px;
   font-size: 11px;
   text-align: center;
-  width: 20px;
-  height: 20px;
-  border-radius: 100%;
-  line-height: 17px;
+  line-height: 14px;
 }
 .bar.bar-header .ion-ios-telephone {
   font-size: 20px;
@@ -712,6 +709,12 @@ ul .mcq_active div span {
 @media (min-width: 768px) and (max-width: 1024px) {
   .hospital-logo {
     width: 320px !important;
+  }
+  .question-- {
+    margin-bottom: 10px;
+  }
+  .e-o-l {
+    margin-top: 10%;
   }
   .notification-screen h3 {
     font-size: 24px;
