--- a/www/less/misc.less
+++ b/www/less/misc.less
@@ -218,10 +218,7 @@ html,html * {
 				    padding: 1px 0px;
 				    font-size: 11px;
 				    text-align: center;
-				    width: 20px;
-				    height: 20px;
-				    border-radius: 100%;
-				    line-height: 17px;
+				    line-height: 14px;
 			}
 		}
 		.ion-ios-telephone{
@@ -806,6 +803,12 @@ ul{
 		.hospital-logo {
     width: 320px !important;
 }
+	.question--{
+	margin-bottom:10px
+	}
+	.e-o-l{
+	    margin-top: 10%;
+	}
 .notification-screen h3{
 	font-size:24px;
 }
@@ -1497,6 +1500,7 @@ line-height: 34px;
 	.q-title{
 		.margin-none;
 	}
+
 
 		.prev-answers{
     font-size: 18px;
